--- a/Frontend/Admin/index.html
+++ b/Frontend/Admin/index.html
@@ -70,7 +70,11 @@
             </tr>
 
         </table>
-
+        <button id="open_market">OPEN MARKET</button>
+        <br>
+        <button id="close_market">CLOSE MARKET</button>
+        <br>
+        <button>SUBMIT</button>
     </div>
 
 
